# assignment

./: .gitignore  main.py  pyproject.toml
first/: README.md  analysis.md  testing.ipynb  user-wallet-transactions.json
second/: compound_scoring_readme.md  extract.py  extracted_data.json  scoring.py  wallet_scores.csv
