[project]
name = "assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "ruff>=0.12.3",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "typing>=3.10.0.0",
]
