[project]
name = "assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gql>=3.5.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "playwright>=1.54.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "requests-toolbelt>=1.0.0",
    "ruff>=0.12.3",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "typing>=3.10.0.0",
    "web3>=7.12.1",
]
